--- a/components/argocd/apps/app-of-apps/base/cluster-config-manager-app.yaml
+++ b/components/argocd/apps/app-of-apps/base/cluster-config-manager-app.yaml
@@ -12,7 +12,7 @@ spec:
   project: cluster-config
   source:
     path: clusters/rhpds-4.9/argocd/
-    repoURL: https://gitlab.consulting.redhat.com/intelligent-application-practice/xray/cluster-bootstrap.git
+    repoURL: https://github.com/strangiato/cluster-bootstrap.git
     targetRevision: main
   syncPolicy:
     automated:
