add odf instance

--- a/components/apps/openshift-data-foundation/instance/overlays/node-labeler/kustomization.yaml
+++ b/components/apps/openshift-data-foundation/instance/overlays/node-labeler/kustomization.yaml
@@ -5,3 +5,8 @@ namespace: openshift-storage
 
 bases:
   - ../../base
+
+resources:
+  - node-label-job.yaml
+  - rbac.yaml
+  - service-account.yaml
