--- a/components/apps/openshift-data-foundation/aggregate/overlays/node-labeler/kustomization.yaml
+++ b/components/apps/openshift-data-foundation/aggregate/overlays/node-labeler/kustomization.yaml
@@ -5,5 +5,5 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 bases:
-  - ../../operator/overlays/stable-4.9
-  - ../../instance/overlays/node-labeler
+  - ../../../operator/overlays/stable-4.9
+  - ../../../instance/overlays/node-labeler
