--- a/components/apps/openshift-data-foundation/instance/base/kustomization.yaml
+++ b/components/apps/openshift-data-foundation/instance/base/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: openshift-storage
 
 resources:
-  - ocsinitialization.yaml
+  # - ocsinitialization.yaml
   - storage-system.yaml
