--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -20,11 +20,16 @@ spec:
           values:
             name: opendatahub-operator
             path: components/apps/opendatahub/operator/overlays/stable
+        # - cluster: local
+        #   url: https://kubernetes.default.svc
+        #   values:
+        #     name: openshift-data-foundation-operator
+        #     path: components/apps/openshift-data-foundation/aggregate/overlays/node-labeler
         - cluster: local
           url: https://kubernetes.default.svc
           values:
             name: openshift-data-foundation-operator
-            path: components/apps/openshift-data-foundation/aggregate/overlays/node-labeler
+            path: components/apps/openshift-data-foundation/operator/overlays/stable-4.9
         - cluster: local
           url: https://kubernetes.default.svc
           values:
