Update odf instance

--- a/components/apps/openshift-data-foundation/instance/base/kustomization.yaml
+++ b/components/apps/openshift-data-foundation/instance/base/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: openshift-storage
 
 resources:
-  # - ocsinitialization.yaml
-  - storage-system.yaml
+  - ocsinitialization.yaml
+  - storagecluster.yaml
+  - storagesystem.yaml
