--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -18,6 +18,11 @@ spec:
         - cluster: local
           url: https://kubernetes.default.svc
           values:
+            name: crunchy-postgres-operator
+            path: components/apps/crunchy-postgres/operator/overlays/v5
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
             name: opendatahub-operator
             path: components/apps/opendatahub/operator/overlays/stable
         - cluster: local
@@ -25,11 +30,6 @@ spec:
           values:
             name: openshift-data-foundation-operator
             path: components/apps/openshift-data-foundation/aggregate/overlays/node-labeler
-        # - cluster: local
-        #   url: https://kubernetes.default.svc
-        #   values:
-        #     name: openshift-data-foundation-operator
-        #     path: components/apps/openshift-data-foundation/operator/overlays/stable-4.9
         - cluster: local
           url: https://kubernetes.default.svc
           values:
