--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -35,11 +35,11 @@ spec:
           values:
             name: openshift-pipelines-operator
             path: components/apps/openshift-pipelines/operator/overlays/stable
-        # - cluster: local
-        #   url: https://kubernetes.default.svc
-        #   values:
-        #     name: openshift-serverless-operator
-        #     path: components/apps/openshift-serverless/aggregate/knative-kafka
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
+            name: openshift-serverless-operator
+            path: components/apps/openshift-serverless/aggregate/knative-kafka
         - cluster: local
           url: https://kubernetes.default.svc
           values:
