--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -45,6 +45,11 @@ spec:
           values:
             name: seldon-operator
             path: components/apps/seldon/operator/overlays/stable
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
+            name: quay-registry-operator
+            path: components/apps/quay-registry/operator/overlays/stable
   template:
     metadata:
       name: '{{values.name}}'
