--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -49,7 +49,7 @@ spec:
           url: https://kubernetes.default.svc
           values:
             name: quay-registry-operator
-            path: components/apps/quay-registry/operator/overlays/stable
+            path: components/apps/quay-registry/operator/overlays/stable-3.6
   template:
     metadata:
       name: '{{values.name}}'
