--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -45,11 +45,11 @@ spec:
           values:
             name: seldon-operator
             path: components/apps/seldon/operator/overlays/stable
-        - cluster: local
-          url: https://kubernetes.default.svc
-          values:
-            name: quay-registry-operator
-            path: components/apps/quay-registry/operator/overlays/stable-3.6
+        # - cluster: local
+        #   url: https://kubernetes.default.svc
+        #   values:
+        #     name: quay-registry-operator
+        #     path: components/apps/quay-registry/aggregate/overlays/default
   template:
     metadata:
       name: '{{values.name}}'
