--- a/components/operators/openshift-data-foundation/instance/overlays/node-labeler/rbac.yaml
+++ b/components/operators/openshift-data-foundation/instance/overlays/node-labeler/rbac.yaml
@@ -2,6 +2,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: node-labeler
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "-5"
 rules:
   - apiGroups: [""]
     resources:
@@ -18,6 +21,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: node-labeler
   namespace: openshift-storage
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "-5"
 subjects:
   - kind: ServiceAccount
     name: ocs-node-labeler
