--- a/components/operators/openshift-data-foundation/instance/overlays/node-labeler/service-account.yaml
+++ b/components/operators/openshift-data-foundation/instance/overlays/node-labeler/service-account.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ocs-node-labeler
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "-10"
