add manual sync override

--- a/clusters/rhpds-4.9/argocd/kustomization.yaml
+++ b/clusters/rhpds-4.9/argocd/kustomization.yaml
@@ -19,3 +19,14 @@ patches:
       group: argoproj.io
       version: v1alpha1
       kind: Application
+  # Uncomment patches to disable automatic sync
+  - path: patch-applicationset-manual-sync.yaml
+    target:
+      group: argoproj.io
+      version: v1alpha1
+      kind: ApplicationSet
+  - path: patch-application-manual-sync.yaml
+    target:
+      group: argoproj.io
+      version: v1alpha1
+      kind: Application
