--- a/components/operators/openshift-gitops/instance/overlays/rhpds/patch-resource-customizations.yaml
+++ b/components/operators/openshift-gitops/instance/overlays/rhpds/patch-resource-customizations.yaml
@@ -35,3 +35,31 @@
         health_status.status = "Progressing"
         health_status.message = "An install plan for a subscription is pending installation"
         return health_status
+    odf.openshift.io/StorageSystem:
+      health.lua: |
+        health_status = {}
+        if obj.status ~= nil then
+          if obj.status.conditions ~= nil then
+            msg = ""
+            for i, condition in pairs(obj.status.conditions) do
+              msg = msg .. condition.type .. " | " .. condition.status .. " | " .. condition.reason .. "\n"
+
+              if condition.type == "Available" and condition.status == "True" then
+                health_status.status = "Healthy"
+              elseif condition.type == "Progressing" and condition.status == "True" then
+                health_status.status = "Progressing"
+              elseif (condition.type == "StorageSystemInvalid" and condition.status == "True") or (condition.type == "VendorCsvReady" and condition.status == "False") or (condition.type == "VendorSystemPresent" and condition.status == "False") then
+                health_status.status = "Degraded"
+              else
+                health_status.status = "Progressing"
+              end
+              
+            end
+
+            health_status.message = msg
+            return health_status
+          end
+        end
+        health_status.status = "Progressing"
+        health_status.message = "The StorageSystem is progressing"
+        return health_status
