--- a/components/operators/openshift-data-foundation/aggregate/overlays/aws/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/aggregate/overlays/aws/kustomization.yaml
@@ -6,4 +6,4 @@ commonAnnotations:
 
 bases:
   - ../../../operator/overlays/stable-4.9
-  - ../../../instance/overlays/node-labeler
+  - ../../../instance/overlays/aws
