--- a/components/operators/openshift-gitops/instance/overlays/rhpds/patch-resource-customizations.yaml
+++ b/components/operators/openshift-gitops/instance/overlays/rhpds/patch-resource-customizations.yaml
@@ -42,7 +42,7 @@
           if obj.status.conditions ~= nil then
             msg = ""
             for i, condition in pairs(obj.status.conditions) do
-              msg = msg .. condition.type .. " | " .. condition.status .. " | " .. condition.reason .. "\n"
+              msg = msg .. i .. ": " .. condition.type .. " | " .. condition.status .. "\n"
 
               if condition.type == "Available" and condition.status == "True" then
                 health_status.status = "Healthy"
@@ -50,8 +50,6 @@
                 health_status.status = "Progressing"
               elseif (condition.type == "StorageSystemInvalid" and condition.status == "True") or (condition.type == "VendorCsvReady" and condition.status == "False") or (condition.type == "VendorSystemPresent" and condition.status == "False") then
                 health_status.status = "Degraded"
-              else
-                health_status.status = "Progressing"
               end
               
             end
