--- a/components/operators/openshift-data-foundation/operator/base/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 namespace: openshift-storage
 
 resources:
+  - enable-console-plugin-job.yaml
+  - enable-console-plugin-rbac.yaml
+  - enable-console-plugin-sa.yaml
   - openshift-data-foundation-console-plugin.yaml
   - openshift-data-foundation-operator-subscription.yaml
   - openshift-data-foundation-operator-operatorgroup.yaml
