--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
@@ -16,7 +16,8 @@ spec:
           - /bin/bash
           - -c
           - |
-            oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": ["${PLUGIN_NAME}"] } }' --type=merge      restartPolicy: Never
+
+            oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": ["${PLUGIN_NAME}"] } }' --type=merge
       restartPolicy: Never
       serviceAccount: enable-odf-console-plugin
       serviceAccountName: enable-odf-console-plugin
