--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
@@ -17,7 +17,7 @@ spec:
           - -c
           - |
             echo "Attempting to enable ${PLUGIN_NAME} plugin"
-            oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": ["${PLUGIN_NAME}"] } }' --type=merge
+            oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": ["'${PLUGIN_NAME}'"] } }' --type=merge
       restartPolicy: Never
       serviceAccount: enable-odf-console-plugin
       serviceAccountName: enable-odf-console-plugin
