--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
@@ -17,7 +17,13 @@ spec:
           - -c
           - |
             echo "Attempting to enable ${PLUGIN_NAME} plugin"
-            oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": ["'${PLUGIN_NAME}'"] } }' --type=merge
+            
+            INSTALLED_PLUGINS=$(oc get consoles.operator.openshift.io cluster -o=jsonpath='{.spec.plugins}')
+            if [[ "${INSTALLED_PLUGINS}" == *"${PLUGIN_NAME}"]]; then
+              echo "${PLUGIN_NAME} is already enabled"
+            else
+              oc patch consoles.operator.openshift.io cluster --patch '[{"op": "add", "path": "/spec/plugins/-", "value": "'${PLUGIN_NAME}'"}]'
+            fi
       restartPolicy: Never
       serviceAccount: enable-odf-console-plugin
       serviceAccountName: enable-odf-console-plugin
