--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: enable-odf-console-plugin
   generateName: enable-odf-console-plugin-
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
 spec:
   template:
     spec:
