--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-rbac.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-rbac.yaml
@@ -3,7 +3,7 @@ kind: ClusterRole
 metadata:
   name: enable-odf-console-plugin
 rules:
-  - apiGroups: ["operator.openshift.io"]
+  - apiGroups: ["operator.openshift.io/v1"]
     resources:
       - consoles
     verbs:
