--- a/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
+++ b/components/operators/openshift-data-foundation/operator/base/enable-console-plugin-job.yaml
@@ -21,6 +21,12 @@ spec:
               echo "Attempting to enable ${PLUGIN_NAME} plugin"
               echo ""
 
+              # Create the plugins section on the object if it doesn't exist
+              if [ -z $(oc get consoles.operator.openshift.io cluster -o=jsonpath='{.spec.plugins}') ]; then
+                echo "Creating plugins object"
+                oc patch consoles.operator.openshift.io cluster --patch '{ "spec": { "plugins": [] } }' --type=merge
+              fi
+
               INSTALLED_PLUGINS=$(oc get consoles.operator.openshift.io cluster -o=jsonpath='{.spec.plugins}')
               echo "Current plugins:"
               echo ${INSTALLED_PLUGINS}
@@ -28,6 +34,7 @@ spec:
               if [[ "${INSTALLED_PLUGINS}" == *"${PLUGIN_NAME}"* ]]; then
                   echo "${PLUGIN_NAME} is already enabled"
               else
+                  echo "Enabling plugin: ${PLUGIN_NAME}"
                   oc patch consoles.operator.openshift.io cluster --type=json --patch '[{"op": "add", "path": "/spec/plugins/-", "value": "'${PLUGIN_NAME}'"}]'
               fi
       restartPolicy: Never
