add support for 4.10 cluster

--- a/clusters/overlays/rhpds-4.10/kustomization.yaml
+++ b/clusters/overlays/rhpds-4.10/kustomization.yaml
@@ -4,9 +4,8 @@ kind: Kustomization
 namespace: openshift-gitops
 
 bases:
-  - ../../../components/argocd/apps/app-of-apps/overlays/default
-  - ../../../components/argocd/applicationsets/overlays/default
-  - ../../../components/argocd/projects/overlays/default
+  - ../../base
+  - ../../../components/argocd/apps/overlays/rhpds-4.10
 
 patches:
   - path: patch-applicationset-repo-revision.yaml
