--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -62,12 +62,12 @@ spec:
         automated:
           prune: false
           selfHeal: true
-        retry:
-          limit: 2
-          backoff:
-            duration: 5s
-            factor: 2
-            maxDuration: 10m
+        # retry:
+        #   limit: 2
+        #   backoff:
+        #     duration: 5s
+        #     factor: 2
+        #     maxDuration: 10m
       source:
         repoURL: https://github.com/strangiato/cluster-bootstrap.git
         targetRevision: main
