--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -23,8 +23,18 @@ spec:
         - cluster: local
           url: https://kubernetes.default.svc
           values:
+            name: elasticsearch-operator
+            path: components/operators/elasticsearch/operator/overlays/stable
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
             name: opendatahub-operator
             path: components/operators/opendatahub/operator/overlays/stable
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
+            name: openshift-logging-operator
+            path: components/operators/openshift-logging/operator/overlays/stable
         - cluster: local
           url: https://kubernetes.default.svc
           values:
