--- a/components/operators/openshift-logging/operator/base/kustomization.yaml
+++ b/components/operators/openshift-logging/operator/base/kustomization.yaml
@@ -5,6 +5,9 @@ kind: Kustomization
 namespace: openshift-logging
 
 resources:
+  - enable-console-plugin-job.yaml
+  - enable-console-plugin-rbac.yaml
+  - enable-console-plugin-sa.yaml
   - openshift-logging-namespace.yaml
   - openshift-logging-operatorgroup.yaml
   - openshift-logging-subscription.yaml
