--- a/components/operators/openshift-logging/operator/base/enable-console-plugin-rbac.yaml
+++ b/components/operators/openshift-logging/operator/base/enable-console-plugin-rbac.yaml
@@ -19,7 +19,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: enable-logging-console-plugin
-    namespace: openshift-storage
+    namespace: openshift-logging
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
