--- a/bootstrap/base/kustomization.yaml
+++ b/bootstrap/base/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - sealed-secrets-secret.yaml
+
 bases:
   - ../../components/operators/openshift-gitops/instance/overlays/rhpds/
