--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -53,6 +53,11 @@ spec:
           - cluster: local
             url: https://kubernetes.default.svc
             values:
+              name: sealed-secrets-operator
+              path: components/operators/sealed-secrets-operator/overlays/default
+          - cluster: local
+            url: https://kubernetes.default.svc
+            values:
               name: seldon-operator
               path: components/operators/seldon/operator/overlays/stable
           - cluster: local
