--- a/components/argocd/apps/base/openshift-data-foundations-app.yaml
+++ b/components/argocd/apps/base/openshift-data-foundations-app.yaml
@@ -12,9 +12,9 @@ spec:
     server: https://kubernetes.default.svc
   project: cluster-config
   source:
-    path: <patch-me>
-    repoURL: https://github.com/strangiato/cluster-bootstrap.git
-    targetRevision: main
+    path: patch-me-see-overlays
+    repoURL: patch-me-see-clusters-overlays
+    targetRevision: patch-me-see-clusters-overlays
   syncPolicy:
     automated:
       prune: false
