add grafana to deployment

--- a/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/applicationsets/base/cluster-operators-applicationset.yaml
@@ -28,6 +28,11 @@ spec:
           - cluster: local
             url: https://kubernetes.default.svc
             values:
+              name: grafana-operator
+              path: components/operators/grafana/operator/overlays/v4
+          - cluster: local
+            url: https://kubernetes.default.svc
+            values:
               name: opendatahub-operator
               path: components/operators/opendatahub/operator/overlays/stable
           - cluster: local
