--- a/components/operators/openshift-serverless/aggregate/default/kustomization.yaml
+++ b/components/operators/openshift-serverless/aggregate/default/kustomization.yaml
@@ -5,6 +5,6 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
-  - ../../operator/overlays/4.7
+  - ../../operator/overlays/stable
   - ../../instance/knative-eventing/overlays/default
   - ../../instance/knative-serving/overlays/default
