--- a/components/argocd/apps/base/cluster-config-app-of-apps.yaml
+++ b/components/argocd/apps/base/cluster-config-app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-config-manager
+  name: cluster-config-app-of-apps
   namespace: openshift-gitops
   labels:
     gitops.ownedBy: cluster-config
