update app-of-app references

--- a/components/argocd/apps/overlays/rhpds-4.10/kustomization.yaml
+++ b/components/argocd/apps/overlays/rhpds-4.10/kustomization.yaml
@@ -9,8 +9,8 @@ patches:
       group: argoproj.io
       version: v1alpha1
       kind: Application
-      name: cluster-config-manager
-    path: patch-cluster-config-manager.yaml
+      name: cluster-config-app-of-apps
+    path: patch-cluster-config-app-of-apps.yaml
   - target:
       group: argoproj.io
       version: v1alpha1
