--- a/.github/workflows/validate-manifests.yaml
+++ b/.github/workflows/validate-manifests.yaml
@@ -33,7 +33,6 @@ jobs:
         uses: ibiqlik/action-yamllint@v3
 
   lint-bash:
-    name: lint-bash
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
@@ -43,3 +42,11 @@ jobs:
         with:
           version: v0.8.0
           severity: warning
+
+  lint-spelling:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v2
+      - name: Spellcheck
+        uses: rojopolis/spellcheck-github-actions@0.27.0
