update: spellcheck linting

--- a/.spellcheck.yaml
+++ b/.spellcheck.yaml
@@ -2,8 +2,11 @@ matrix:
 - name: Markdown
   aspell:
     lang: en
+    #ignore-case: true
   dictionary:
     encoding: utf-8
+    wordlists:
+    - .wordlist.txt
   pipeline:
   - pyspelling.filters.markdown:
   - pyspelling.filters.html:
