--- a/components/operators/sealed-secrets-operator/overlays/default/kustomization.yaml
+++ b/components/operators/sealed-secrets-operator/overlays/default/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - sealed-secrets-namespace.yaml
 
 # Remove the SCC requiring anyuid
-patchesJson6902:
+patches:
   - target:
       version: v1
       group: apps
