--- a/components/argocd/apps/base/kustomization.yaml
+++ b/components/argocd/apps/base/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 
 resources:
   - cluster-config-app-of-apps.yaml
+  - cluster-operators-applicationset.yaml
   - openshift-data-foundations-app.yaml
