--- a/components/argocd/apps/base/cluster-operators-applicationset.yaml
+++ b/components/argocd/apps/base/cluster-operators-applicationset.yaml
@@ -10,71 +10,7 @@ spec:
   generators:
     - list:
         elements:
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: amq-streams-operator
-              path: components/operators/amq-streams/operator/overlays/stable
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: crunchy-postgres-operator
-              path: components/operators/crunchy-postgres/operator/overlays/v5
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: elasticsearch-operator
-              path: components/operators/elasticsearch/operator/overlays/stable
-          # - cluster: local
-          #   url: https://kubernetes.default.svc
-          #   values:
-          #     name: grafana-operator
-          #     path: components/operators/grafana/operator/overlays/v4
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: opendatahub-operator
-              path: components/operators/opendatahub/operator/overlays/stable
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: openshift-logging-operator
-              path: components/operators/openshift-logging/aggregate/overlays/default
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: openshift-pipelines-operator
-              path: components/operators/openshift-pipelines/operator/overlays/latest
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: openshift-serverless-operator
-              path: components/operators/openshift-serverless/aggregate/knative-kafka
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: prometheus-user-workload-monitoring
-              path: components/operators/prometheus-monitoring/instance/overlays/user-workload-monitoring/
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: sealed-secrets-operator
-              path: components/operators/sealed-secrets-operator/overlays/default
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: seldon-operator
-              path: components/operators/seldon/operator/overlays/stable
-          - cluster: local
-            url: https://kubernetes.default.svc
-            values:
-              name: web-terminal-operator
-              path: components/operators/web-terminal-operator/operator/overlays/fast
-          # - cluster: local
-          #   url: https://kubernetes.default.svc
-          #   values:
-          #     name: quay-registry-operator
-          #     path: components/operators/quay-registry/aggregate/overlays/default
+          - patch-me-see-overlays
   template:
     metadata:
       name: '{{values.name}}'
