--- a/components/argocd/apps/overlays/rhpds-4.10/kustomization.yaml
+++ b/components/argocd/apps/overlays/rhpds-4.10/kustomization.yaml
@@ -14,6 +14,6 @@ patches:
   - target:
       group: argoproj.io
       version: v1alpha1
-      kind: Application
-      name: openshift-data-foundation-operator
-    path: patch-openshift-data-foundations.yaml
+      kind: ApplicationSet
+      name: cluster-operators-applicationset
+    path: patch-operators-list.yaml
