--- a/.github/workflows/validate-manifests.yaml
+++ b/.github/workflows/validate-manifests.yaml
@@ -8,7 +8,7 @@ on:
       - "*"
 
 jobs:
-  kustomize-lint:
+  lint-kustomize:
     runs-on: ubuntu-latest
     env:
       KUSTOMIZE_VERSION: 4.5.7
@@ -21,7 +21,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Validate Manifests
         run: ./validate_manifests.sh
-  yaml-lint:
+  
+  lint-yaml:
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
@@ -37,7 +38,8 @@ jobs:
           pip install yamllint
       - name: Validate Manifests
         run: yamllint . -f github
-  helm-lint:
+  
+  lint-helm:
     runs-on: ubuntu-latest
     env:
       HELM_VERSION: 3.9.4
