--- a/.github/workflows/validate-manifests.yaml
+++ b/.github/workflows/validate-manifests.yaml
@@ -73,3 +73,11 @@ jobs:
 
           echo
           echo "Charts successfully validated!"
+
+  check-spelling:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v2
+      - name: Spellcheck
+        uses: rojopolis/spellcheck-github-actions@0.27.0
