--- a/components/argocd/apps/overlays/rosa/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/rosa/patch-operators-list.yaml
@@ -1,11 +1,11 @@
 - op: add
   path: /spec/generators/0/list/elements
   value:
-    # - cluster: local
-    #   url: https://kubernetes.default.svc
-    #   values:
-    #     name: amq-streams-operator
-    #     path: components/operators/amq-streams/operator/overlays/stable
+    - cluster: local
+      url: https://kubernetes.default.svc
+      values:
+        name: amq-streams-operator
+        path: components/operators/amq-streams/operator/overlays/stable
     - cluster: local
       url: https://kubernetes.default.svc
       values:
@@ -16,6 +16,11 @@
       values:
         name: openshift-pipelines-operator
         path: components/operators/openshift-pipelines/operator/overlays/latest
+    - cluster: local
+      url: https://kubernetes.default.svc
+      values:
+        name: openshift-serverless-operator
+        path: components/operators/openshift-serverless/aggregate/knative-kafka
     - cluster: local
       url: https://kubernetes.default.svc
       values:
