--- a/bootstrap/overlays/rosa/kustomization.yaml
+++ b/bootstrap/overlays/rosa/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 
 bases:
   - ../../base
+  - ../../../components/operators/openshift-gitops/instance/overlays/rosa
   - ../../../clusters/overlays/rosa
