update to reencyrpt

--- a/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
+++ b/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
@@ -21,6 +21,8 @@ spec:
         memory: 128Mi
     route:
       enabled: true
+      tls:
+        termination: reencrypt
     service:
       type: ''
   grafana:
