--- a/components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.11/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.11/kustomization.yaml
@@ -7,3 +7,4 @@ commonAnnotations:
 bases:
   - ../../../operator/overlays/stable-4.11
   - ../../../instance/overlays/aws
+  - ../../../config-helpers/node-labeler/overlays/default
