--- a/clusters/overlays/rhds-4.11/patch-application-repo-revision.yaml
+++ b/clusters/overlays/rhds-4.11/patch-application-repo-revision.yaml
@@ -1,6 +1,6 @@
 - op: replace
   path: /spec/source/repoURL
-  value: 'https://github.com/rh-intelligent-application-practice/cluster-bootstrap-gitops.git'
+  value: 'https://github.com/rh-intelligent-application-practice/openshift-cluster-bootstrap-gitops.git'
 - op: replace
   path: /spec/source/targetRevision
-  value: main
+  value: OCP4.11
