--- a/components/operators/openshift-gitops/instance/base/kustomization.yaml
+++ b/components/operators/openshift-gitops/instance/base/kustomization.yaml
@@ -4,6 +4,5 @@ kind: Kustomization
 namespace: openshift-gitops
 
 resources:
-  # - namespace.yaml
+  - argocd.yaml
   - cluster-role-binding.yaml
-  - openshift-gitops-cr.yaml
