switch branch to current for testing

--- a/clusters/overlays/rhpds-4.10/patch-application-repo-revision.yaml
+++ b/clusters/overlays/rhpds-4.10/patch-application-repo-revision.yaml
@@ -3,4 +3,4 @@
   value: 'https://github.com/rh-intelligent-application-practice/cluster-bootstrap-gitops.git'
 - op: replace
   path: /spec/source/targetRevision
-  value: main
+  value: ssa
