--- a/components/operators/openshift-data-foundation/config-helpers/node-labeler/base/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/config-helpers/node-labeler/base/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
   - node-label-job.yaml
   - rbac.yaml
   - service-account.yaml
+
+commonAnnotations:
+  argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
