--- a/clusters/overlays/rhdp-4.11/patch-applicationset-repo-revision.yaml
+++ b/clusters/overlays/rhdp-4.11/patch-applicationset-repo-revision.yaml
@@ -3,5 +3,4 @@
   value: 'https://github.com/rh-intelligent-application-practice/openshift-cluster-bootstrap-gitops.git'
 - op: replace
   path: /spec/template/spec/source/targetRevision
-  # TODO: switch this back to main before creating PR
-  value: OCP4.11
+  value: main
