add resource annotation

--- a/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
+++ b/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: openshift-gitops
   namespace: openshift-gitops
 spec:
+  resourceTrackingMethod: annotation
   server:
     autoscale:
       enabled: false
