--- a/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
+++ b/components/operators/openshift-gitops/instance/base/openshift-gitops-cr.yaml
@@ -23,7 +23,7 @@ spec:
     route:
       enabled: true
       tls:
-        termination: reencrypt
+        termination: edge
     service:
       type: ''
   grafana:
