--- a/components/operators/openshift-data-foundation/operator/overlays/stable-4.11/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/operator/overlays/stable-4.11/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 
 namespace: openshift-storage
 
-bases:
-  - ../../base
+resources:
+- ../../base
 
-patchesJson6902:
-  - target:
-      group: operators.coreos.com
-      version: v1alpha1
-      kind: Subscription
-      name: odf-operator
-      namespace: openshift-storage
-    path: patch-channel.yaml
+patches:
+- path: patch-channel.yaml
+  target:
+    group: operators.coreos.com
+    kind: Subscription
+    name: odf-operator
+    namespace: openshift-storage
+    version: v1alpha1
