--- a/bootstrap/overlays/rosa/kustomization.yaml
+++ b/bootstrap/overlays/rosa/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../base
-  - ../../../components/operators/openshift-gitops/instance/overlays/rosa
-  - ../../../clusters/overlays/rosa
+resources:
+- ../../base
+- ../../../components/operators/openshift-gitops/instance/overlays/rosa
+- ../../../clusters/overlays/rosa
