--- a/clusters/base/kustomization.yaml
+++ b/clusters/base/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 namespace: openshift-gitops
 
-bases:
-  - ../../components/argocd/projects/overlays/default
+resources:
+- ../../components/argocd/projects/overlays/default
