--- a/components/argocd/apps/overlays/rhdp-4.9/kustomization.yaml
+++ b/components/argocd/apps/overlays/rhdp-4.9/kustomization.yaml
@@ -1,19 +1,19 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../base
 
 patches:
-  - target:
-      group: argoproj.io
-      version: v1alpha1
-      kind: Application
-      name: cluster-config-app-of-apps
-    path: patch-cluster-config-app-of-apps.yaml
-  - target:
-      group: argoproj.io
-      version: v1alpha1
-      kind: ApplicationSet
-      name: cluster-operators-applicationset
-    path: patch-operators-list.yaml
+- path: patch-cluster-config-app-of-apps.yaml
+  target:
+    group: argoproj.io
+    kind: Application
+    name: cluster-config-app-of-apps
+    version: v1alpha1
+- path: patch-operators-list.yaml
+  target:
+    group: argoproj.io
+    kind: ApplicationSet
+    name: cluster-operators-applicationset
+    version: v1alpha1
+resources:
+- ../../base
