--- a/components/operators/opendatahub/operator/overlays/stable/kustomization.yaml
+++ b/components/operators/opendatahub/operator/overlays/stable/kustomization.yaml
@@ -1,14 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../base
+resources:
+- ../../base
 
 patches:
-  - target:
-      group: operators.coreos.com
-      version: v1alpha1
-      kind: Subscription
-      name: opendatahub-operator
-      namespace: openshift-operators
-    path: patch-channel.yaml
+- path: patch-channel.yaml
+  target:
+    group: operators.coreos.com
+    kind: Subscription
+    name: opendatahub-operator
+    namespace: openshift-operators
+    version: v1alpha1
+
