--- a/components/operators/openshift-data-foundation/aggregate/overlays/aws/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/aggregate/overlays/aws/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
-bases:
-  - ../../../operator/overlays/stable-4.11
-  - ../../../instance/overlays/aws
+resources:
+- ../../../operator/overlays/stable-4.11
+- ../../../instance/overlays/aws
