--- a/components/operators/openshift-gitops/instance/overlays/rosa/kustomization.yaml
+++ b/components/operators/openshift-gitops/instance/overlays/rosa/kustomization.yaml
@@ -3,18 +3,18 @@ kind: Kustomization
 
 namespace: openshift-gitops
 
-bases:
-  - ../../base
+resources:
+- ../../base
 
 patches:
-  - patch: |-
-      - op: replace
-        path: /spec/rbac/policy
-        value: |
-          g, system:cluster-admins, role:admin
-          g, cluster-admins, role:admin
-    target:
-      kind: ArgoCD
-  - path: patch-resource-customizations.yaml
-    target:
-      kind: ArgoCD
+- patch: |-
+    - op: replace
+      path: /spec/rbac/policy
+      value: |
+        g, system:cluster-admins, role:admin
+        g, cluster-admins, role:admin
+  target:
+    kind: ArgoCD
+- path: patch-resource-customizations.yaml
+  target:
+    kind: ArgoCD
