--- a/components/operators/openshift-serverless/operator/overlays/stable/kustomization.yaml
+++ b/components/operators/openshift-serverless/operator/overlays/stable/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../base
 
 patches:
-  - target:
-      group: operators.coreos.com
-      version: v1alpha1
-      kind: Subscription
-      name: serverless-operator
-    path: patch-channel.yaml
+- path: patch-channel.yaml
+  target:
+    group: operators.coreos.com
+    kind: Subscription
+    name: serverless-operator
+    version: v1alpha1
+resources:
+- ../../base
