--- a/components/operators/quay-registry/aggregate/overlays/default/kustomization.yaml
+++ b/components/operators/quay-registry/aggregate/overlays/default/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
-bases:
-  - ../../../operator/overlays/stable-3.6
-  - ../../../instance/overlays/default
+resources:
+- ../../../operator/overlays/stable-3.6
+- ../../../instance/overlays/default
