update storage cluster config

--- a/components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.12/kustomization.yaml
+++ b/components/operators/openshift-data-foundation/aggregate/overlays/aws-node-labeler-4.12/kustomization.yaml
@@ -6,5 +6,5 @@ commonAnnotations:
 
 resources:
   - ../../../operator/overlays/stable-4.12
-  - ../../../instance/overlays/aws
+  - ../../../instance/overlays/aws-4.12
   - ../../../config-helpers/node-labeler/overlays/default
