transition to component configured gitops instance

--- a/components/operators/openshift-gitops/instance/base/kustomization.yaml
+++ b/components/operators/openshift-gitops/instance/base/kustomization.yaml
@@ -4,5 +4,4 @@ kind: Kustomization
 namespace: openshift-gitops
 
 resources:
-  - cluster-role-binding.yaml
-  - openshift-gitops-cr.yaml
+  - openshift-gitops.yaml
