--- a/components/operators/openshift-gitops/operator/base/kustomization.yaml
+++ b/components/operators/openshift-gitops/operator/base/kustomization.yaml
@@ -1,10 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-operators
-
 resources:
-  - enable-console-plugin-job.yaml
-  - enable-console-plugin-rbac.yaml
-  - enable-console-plugin-sa.yaml
-  - openshift-gitops-operator-subscription.yaml
+  - subscription.yaml
