temp remove subscription health check

--- a/components/operators/openshift-gitops/instance/components/health-check-olm/kustomization.yaml
+++ b/components/operators/openshift-gitops/instance/components/health-check-olm/kustomization.yaml
@@ -5,6 +5,6 @@ patches:
   - path: patch-installplan-health-check.yaml
     target:
       kind: ArgoCD
-  - path: patch-subscription-health-check.yaml
-    target:
-      kind: ArgoCD
+  # - path: patch-subscription-health-check.yaml
+  #   target:
+  #     kind: ArgoCD
